src/SentimentAnalysisApp/frontend/src/theme/app.scss
// Elevation mixins.
@use '@material/elevation/index' as elevation;

// Paper mixins.
//@use '@smui/paper/index' as paper;
@use '@material/theme/index' as theme;

@use '@material/typography/mdc-typography';

@use '@material/top-app-bar/index' as top-app-bar;
@use '@material/drawer/index' as drawer;
@use '@material/drawer' as header;

.mdc-top-app-bar.app-top-app-bar {
  // Color the top bar with "surface" colors.
  @include top-app-bar.fill-color(surface);
  @include top-app-bar.ink-color(on-surface);
  @include top-app-bar.icon-ink-color(on-surface);
  // Give it a shadow.
  @include elevation.elevation(5);
  // Position it above the drawer.
  z-index: 5;
  position: relative;
}

.app-drawer {
  @include elevation.elevation(5);
}

html {
  height: 100vh;
  width: 100vw;
  position: fixed;
}

body,
#smui-app {
  display: flex;
  flex-direction: column;
  height: 100%;
  margin: 0;
}

.drawer-container {
  flex-grow: 1;
  display: flex;
  flex-direction: row;
  z-index: 5;
  height: 100%;
}


.app-drawer,
.app-main-content {
  overflow: auto;
}

.app-drawer.app-drawer-adjust {
  padding-bottom: top-app-bar.$row-height;
}

.app-content {
  flex-grow: 1;
  position: relative;
  display: flex;
  flex-direction: column;
  height: 100%;
}

.app-main-content {
  overflow: auto;
  display: flex;
  flex-direction: column;
  position: relative;
}

.app-main-content > section {
  max-width: 1200px;
  padding: 2rem;
  flex: 1;
  box-sizing: border-box;
}

.app-main-content > section:after {
  height: 32px;
  display: block;
  content: ' ';
}

.app-spaced {
  margin-bottom: 2.5em;
}

.highlight {
  background-color: #282b2e;
  color: #e0e2e4;
  padding: 1em !important;
  border-radius: 5px;
}

.status {
  max-width: 100%;
  font-size: 0.9em;
  word-break: break-word;
  white-space: normal;
  margin-bottom: 0;
}

.overview-section, .stats-section {
  background-color: theme.$surface;
}


@media (max-width: 460px) {
  .app-main-content > section {
    padding: 16px;
  }
}

.settings-bar{
  background-color: theme.$surface;
  @include elevation.elevation(2);
}


.filters-bar{
  background-color: theme.$surface;
  @include elevation.elevation(2);
}

.radial-labels {
  font-size: 1em;
  fill: theme.$on-surface;
  background-color: theme.$surface;
}

